--- a/app/src/main/res/drawer/layout/drawer.xml
+++ b/app/src/main/res/drawer/layout/drawer.xml
@@ -26,9 +26,9 @@
         android:id="@+id/fader"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:fel_edge="bottom|top"
-        app:fel_size_bottom="100dp"
-        app:fel_size_top="20dp">
+        app:edge="bottom|top"
+        app:size_bottom="100dp"
+        app:size_top="20dp">
 
         <com.stario.launcher.ui.common.pager.CustomDurationViewPager
             android:id="@+id/pager"
