--- a/app/src/main/res/page_manager/layout/page_manager.xml
+++ b/app/src/main/res/page_manager/layout/page_manager.xml
@@ -15,127 +15,141 @@
   ~ along with this program. If not, see <http://www.gnu.org/licenses/>
   -->
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:forceDarkAllowed="false">
+    android:forceDarkAllowed="false"
+    tools:targetApi="q">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/page_container"
-        android:layout_width="0px"
-        android:layout_height="0px"
-        android:padding="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/home"
-            android:layout_width="0px"
-            android:layout_height="0px"
-            app:layout_constrainedHeight="true"
-            app:layout_constrainedWidth="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHeight_percent="0.3333"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent="0.3333">
+        <com.stario.launcher.ui.common.FadingEdgeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:edge="top|bottom|left|right"
+            app:is_rounded="true"
+            app:size_bottom="100dp"
+            app:size_left="100dp"
+            app:size_right="100dp"
+            app:size_top="100dp">
 
-            <TextView
+            <com.stario.launcher.ui.common.GradientView
+                android:id="@+id/gradient"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="5dp"
-                android:breakStrategy="balanced"
+                android:alpha="0" />
+
+        </com.stario.launcher.ui.common.FadingEdgeLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/pages_container"
+            android:layout_width="0px"
+            android:layout_height="0px"
+            android:padding="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/home"
+                android:layout_width="0px"
+                android:layout_height="0px"
+                app:layout_constrainedHeight="true"
+                app:layout_constrainedWidth="true"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHeight_percent="0.3333"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintWidth_percent="0.3333">
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/left"
+                android:layout_width="0px"
+                android:layout_height="0px"
+                android:background="@drawable/page_placeholder"
+                app:layout_constraintBottom_toBottomOf="@id/home"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/home"
+                app:layout_constraintTop_toTopOf="@id/home">
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/right"
+                android:layout_width="0px"
+                android:layout_height="0px"
+                android:background="@drawable/page_placeholder"
+                app:layout_constraintBottom_toBottomOf="@id/home"
+                app:layout_constraintLeft_toRightOf="@id/home"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@id/home" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/bottom"
+                android:layout_width="0px"
+                android:layout_height="0px"
+                android:background="@drawable/page_placeholder"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="@id/home"
+                app:layout_constraintRight_toRightOf="@id/home"
+                app:layout_constraintTop_toBottomOf="@id/home" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/top"
+                android:layout_width="0px"
+                android:layout_height="0px"
+                android:background="@drawable/page_placeholder"
+                app:layout_constraintBottom_toTopOf="@id/home"
+                app:layout_constraintLeft_toLeftOf="@id/home"
+                app:layout_constraintRight_toRightOf="@id/home"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <carbon.widget.LinearLayout
+            android:id="@+id/add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/ripple_secondary"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="10dp"
+            app:carbon_cornerRadius="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:ignore="PxUsage">
+
+            <TextView
+                android:id="@+id/add_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:fontFamily="@font/dm_sans_medium"
-                android:gravity="center"
-                android:letterSpacing="-0.03"
-                android:text="@string/home_page"
-                android:textColor="?attr/colorOnBackground"
+                android:text="@string/add"
+                android:textColor="?attr/colorOnTertiaryContainer"
                 android:textSize="20sp" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:padding="10dp"
+                android:src="@drawable/ic_add_page" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/left"
-            android:layout_width="0px"
-            android:layout_height="0px"
-            android:background="@drawable/page_placeholder"
-            app:layout_constraintBottom_toBottomOf="@id/home"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/home"
-            app:layout_constraintTop_toTopOf="@id/home">
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/right"
-            android:layout_width="0px"
-            android:layout_height="0px"
-            android:background="@drawable/page_placeholder"
-            app:layout_constraintBottom_toBottomOf="@id/home"
-            app:layout_constraintLeft_toRightOf="@id/home"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/home" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/bottom"
-            android:layout_width="0px"
-            android:layout_height="0px"
-            android:background="@drawable/page_placeholder"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="@id/home"
-            app:layout_constraintRight_toRightOf="@id/home"
-            app:layout_constraintTop_toBottomOf="@id/home" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/top"
-            android:layout_width="0px"
-            android:layout_height="0px"
-            android:background="@drawable/page_placeholder"
-            app:layout_constraintBottom_toTopOf="@id/home"
-            app:layout_constraintLeft_toLeftOf="@id/home"
-            app:layout_constraintRight_toRightOf="@id/home"
-            app:layout_constraintTop_toTopOf="parent" />
+        </carbon.widget.LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <carbon.widget.LinearLayout
-        android:id="@+id/add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/ripple_secondary"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="10dp"
-        app:carbon_cornerRadius="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="PxUsage">
-
-        <TextView
-            android:id="@+id/add_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:fontFamily="@font/dm_sans_medium"
-            android:text="@string/add"
-            android:textColor="?attr/colorOnTertiaryContainer"
-            android:textSize="20sp" />
-
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:padding="10dp"
-            android:src="@drawable/ic_add_page" />
-
-    </carbon.widget.LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
