--- a/app/src/main/res/page_manager/layout/system_page.xml
+++ b/app/src/main/res/page_manager/layout/system_page.xml
@@ -17,22 +17,10 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/page_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/page_background">
-
-    <com.stario.launcher.ui.common.FadingEdgeLayout
-        android:id="@+id/fader"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:fel_edge="right|bottom|left|top">
-
-        <com.stario.launcher.ui.common.GradientView
-            android:id="@+id/gradient_background"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </com.stario.launcher.ui.common.FadingEdgeLayout>
 
     <TextView
         android:id="@+id/name"
