--- a/app/src/main/res/settings/layout/settings.xml
+++ b/app/src/main/res/settings/layout/settings.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2025 Răzvan Albu
   ~
   ~ This program is free software: you can redistribute it and/or modify
@@ -18,14 +17,16 @@
 
 <com.stario.launcher.ui.common.FadingEdgeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     android:forceDarkAllowed="false"
-    app:fel_edge="bottom"
-    app:fel_size_bottom="20dp">
+    android:transitionGroup="true"
+    app:edge="bottom"
+    app:size_bottom="20dp">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/coordinator"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -34,7 +35,8 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <carbon.widget.TextView
+            <TextView
+                android:id="@+id/title_placeholder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/dm_sans_medium"
@@ -49,10 +51,11 @@
                 android:id="@+id/fader"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:fel_edge="top"
-                app:fel_size_top="20dp">
+                app:edge="top"
+                app:size_top="20dp">
 
                 <androidx.core.widget.NestedScrollView
+                    android:id="@+id/scroller"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:clipToPadding="false"
@@ -74,7 +77,7 @@
             android:paddingLeft="30dp"
             android:paddingRight="30dp">
 
-            <carbon.widget.TextView
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/dm_sans_medium"
