--- a/app/src/main/res/settings_dialogs/layout/pop_up_icons.xml
+++ b/app/src/main/res/settings_dialogs/layout/pop_up_icons.xml
@@ -21,9 +21,9 @@
     android:id="@+id/content"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:fel_edge="top|bottom"
-    app:fel_size_bottom="20dp"
-    app:fel_size_top="20dp">
+    app:edge="top|bottom"
+    app:size_bottom="20dp"
+    app:size_top="20dp">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
