--- a/app/src/main/res/settings_dialogs/layout/pop_up_kagi.xml
+++ b/app/src/main/res/settings_dialogs/layout/pop_up_kagi.xml
@@ -20,9 +20,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:fel_edge="top|bottom"
-    app:fel_size_bottom="20dp"
-    app:fel_size_top="15dp">
+    app:edge="top|bottom"
+    app:size_bottom="20dp"
+    app:size_top="15dp">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
