--- a/app/src/main/res/settings_dialogs/layout/pop_up_hide_page.xml
+++ b/app/src/main/res/settings_dialogs/layout/pop_up_hide_page.xml
@@ -35,7 +35,7 @@
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
         android:paddingRight="20dp"
-        android:paddingBottom="10dp">
+        android:tag="nested">
 
     </com.stario.launcher.ui.recyclers.autogrid.AutoGridRecyclerView>
 
