--- a/app/src/main/res/media/layout/media.xml
+++ b/app/src/main/res/media/layout/media.xml
@@ -77,6 +77,7 @@
                     android:marqueeRepeatLimit="marquee_forever"
                     android:scrollHorizontally="true"
                     android:singleLine="true"
+                    android:letterSpacing="-0.03"
                     android:textColor="@color/light"
                     android:textSize="20sp" />
 
@@ -97,7 +98,7 @@
                 android:layout_width="46dp"
                 android:layout_height="46dp"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/ic_pause_play" />
+                android:src="@drawable/ic_play_pause" />
 
         </LinearLayout>
 
