#265 Add low spec mode

--- a/app/src/main/res/settings_dialogs/layout/pop_up_root.xml
+++ b/app/src/main/res/settings_dialogs/layout/pop_up_root.xml
@@ -27,6 +27,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:paddingTop="1dp"
+        android:paddingLeft="1dp"
+        android:paddingRight="1dp"
         android:background="@drawable/background_sheet"
         android:forceDarkAllowed="false"
         android:orientation="vertical"
