--- a/app/src/main/res/briefing/layout/article.xml
+++ b/app/src/main/res/briefing/layout/article.xml
@@ -25,7 +25,7 @@
     android:layout_marginTop="10dp"
     android:layout_marginRight="10dp"
     android:layout_marginBottom="10dp"
-    android:background="?attr/colorSurfaceContainer"
+    android:background="@drawable/background_large_corners"
     android:clipChildren="false"
     android:forceDarkAllowed="false"
     android:orientation="vertical"
