--- a/app/src/main/res/settings/layout/settings_content.xml
+++ b/app/src/main/res/settings/layout/settings_content.xml
@@ -109,56 +109,6 @@
 
         </carbon.widget.RelativeLayout>
 
-        <carbon.widget.RelativeLayout
-            android:id="@+id/imperial_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ripple"
-            android:padding="7dp"
-            app:carbon_cornerRadius="5dp">
-
-            <com.google.android.material.materialswitch.MaterialSwitch
-                android:id="@+id/imperial"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="false"
-                android:drawableStart="@drawable/ic_ruler"
-                android:drawablePadding="10dp"
-                android:fontFamily="@font/dm_sans_medium"
-                android:letterSpacing="-0.03"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                android:text="@string/imperial_units"
-                android:textColor="?attr/colorOnSurface"
-                android:textSize="20sp" />
-
-        </carbon.widget.RelativeLayout>
-
-        <carbon.widget.RelativeLayout
-            android:id="@+id/vibrations_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ripple"
-            android:padding="7dp"
-            app:carbon_cornerRadius="5dp">
-
-            <com.google.android.material.materialswitch.MaterialSwitch
-                android:id="@+id/vibrations"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="false"
-                android:drawableStart="@drawable/ic_vibrations"
-                android:drawablePadding="10dp"
-                android:fontFamily="@font/dm_sans_medium"
-                android:letterSpacing="-0.03"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                android:text="@string/vibrations"
-                android:textColor="?attr/colorOnSurface"
-                android:textSize="20sp" />
-
-        </carbon.widget.RelativeLayout>
-
         <carbon.widget.TextView
             android:id="@+id/pages"
             android:layout_width="match_parent"
@@ -695,6 +645,67 @@
         android:transitionGroup="true"
         app:carbon_cornerRadius="20dp">
 
+        <carbon.widget.LinearLayout
+            android:id="@+id/low_spec_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ripple"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingStart="15dp"
+            android:paddingTop="7dp"
+            android:paddingEnd="15dp"
+            android:paddingBottom="7dp"
+            app:carbon_cornerRadius="5dp">
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_memory" />
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="0px" />
+
+            <LinearLayout
+                android:layout_width="0px"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/dm_sans_medium"
+                    android:letterSpacing="-0.03"
+                    android:text="@string/low_spec"
+                    android:textColor="?attr/colorOnSurface"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/dm_sans_regular"
+                    android:text="@string/low_spec_description"
+                    android:textColor="?attr/colorOnSurface"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="0px" />
+
+            <com.google.android.material.materialswitch.MaterialSwitch
+                android:id="@+id/low_spec"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="false" />
+
+        </carbon.widget.LinearLayout>
+
         <carbon.widget.RelativeLayout
             android:id="@+id/lock_animation_container"
             android:layout_width="match_parent"
@@ -741,6 +752,56 @@
         android:showDividers="middle"
         android:transitionGroup="true"
         app:carbon_cornerRadius="20dp">
+
+        <carbon.widget.RelativeLayout
+            android:id="@+id/imperial_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ripple"
+            android:padding="7dp"
+            app:carbon_cornerRadius="5dp">
+
+            <com.google.android.material.materialswitch.MaterialSwitch
+                android:id="@+id/imperial"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:drawableStart="@drawable/ic_ruler"
+                android:drawablePadding="10dp"
+                android:fontFamily="@font/dm_sans_medium"
+                android:letterSpacing="-0.03"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:text="@string/imperial_units"
+                android:textColor="?attr/colorOnSurface"
+                android:textSize="20sp" />
+
+        </carbon.widget.RelativeLayout>
+
+        <carbon.widget.RelativeLayout
+            android:id="@+id/vibrations_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ripple"
+            android:padding="7dp"
+            app:carbon_cornerRadius="5dp">
+
+            <com.google.android.material.materialswitch.MaterialSwitch
+                android:id="@+id/vibrations"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:drawableStart="@drawable/ic_vibrations"
+                android:drawablePadding="10dp"
+                android:fontFamily="@font/dm_sans_medium"
+                android:letterSpacing="-0.03"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:text="@string/vibrations"
+                android:textColor="?attr/colorOnSurface"
+                android:textSize="20sp" />
+
+        </carbon.widget.RelativeLayout>
 
         <carbon.widget.TextView
             android:id="@+id/restart"
