--- a/app/src/main/res/settings_dialogs/layout/pop_up_pinned_category.xml
+++ b/app/src/main/res/settings_dialogs/layout/pop_up_pinned_category.xml
@@ -53,7 +53,7 @@
 
     <carbon.widget.RecyclerView
         android:id="@+id/recycler"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
